# subhoard

./: .coderabbit.yml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt  subhoard.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coderabbit-reviewed.yml  release.yml  tests.yml
tests/: test_subhoard.py
