[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "subhoard"
version = "2.1.0"
description = "Archive authorized Substack content to Markdown, PDF, or email"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Paul Booth" },
]
keywords = ["substack", "archive", "markdown", "pdf", "email"]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Email",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "camoufox[geoip]>=0.4,<1",
  "reportlab>=4,<5",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "ruff>=0.15,<0.16",
]

[project.urls]
Homepage = "https://github.com/pabooth/subhoard"
Issues = "https://github.com/pabooth/subhoard/issues"
Source = "https://github.com/pabooth/subhoard"

[project.scripts]
subhoard = "subhoard:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.setuptools]
py-modules = ["subhoard"]
